fixed border misalignment on multi-header

--- a/src/components/FullDay.css
+++ b/src/components/FullDay.css
@@ -1,20 +1,32 @@
 .full-day {
   flex-grow: 1; /*Makes each day expand evenly to take up space*/
+
+  display: flex;
+  flex-direction: column;
+  height: calc(var(--multi-hr-height) * 25);
 }
 
 .full-day-hr {
-  height: var(--multi-hr-height);
+  /*height: var(--multi-hr-height);*/
+  flex-grow: 1;
   border-top: 1px solid var(--header-border-color);
   border-left: 1px solid var(--header-border-color);
 }
 
-.full-day-hr:first-child,
+.full-day-hr:nth-child(2),
 .full-day-hr:last-child {
-  /*show 15mins of prev day as a sort of buffer*/
-  height: calc(var(--multi-hr-height) / 4);
+  /*show 15mins of prev day & next day as a sort of buffer*/
+  flex-grow: 0.25;
 }
 
-.full-day-hr:first-child {
-  /*show 15mins of prev day as a sort of buffer*/
+.full-day-hr:nth-child(2) {
   border-top: none;
+}
+
+.multi-header-border {
+  position: fixed;
+  width: 1px;
+  height: 20px;
+  background: var(--header-border-color);
+  transform: translateY(-100%);
 }
