--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
   --text-color: rgb(60, 64, 67);
   --global-header-height: 71.96px;
   --header-border-color: #dadce0;
-  --multi-header-height: 80px;
+  --multi-header-height: 67.78px;
   --multi-hr-height: 5rem;
-  --time-scale-width: 3rem;
+  --time-scale-width: 4rem;
 }
 
 body {
